--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
   </head>
   <body>
     <div class="container">
-      <h1>XXX's Portfolio</h1>
+      <h1>KIDA's Portfolio</h1>
       <p>関西在住の高専4年生です。メカトロ系の学科に在籍しています。</p>
 
       <h2>Works</h2>
 
-      <h3>2022年: 自律走行ロボットの設計製作</h3>
+      <h3>2023年: 大阪天満宮の３Dモデル製作</h3>
       <p>
-        3年次に「<strong>自律走行ロボットの開発プロジェクト</strong>」に取り組みました。
+        3年次に「<strong>百年後に残したいもの</strong>」というテーマの基礎研究で、私のチームは神社を選び、残す方法として、仮想空間を用いた方法を考えました。
       </p>
       <p>
-        具体的には超音波センサ（検知範囲:5-100cm）を用いた障害物回避システムを搭載した「キャタピラ型走行ロボット」をクラスメイト4名とチームを組んで、要件定義から完成まで約16週間かけて取り組みました。自分は、Fusion
-        360（3次元CAD）を用いた機械設計を担当し、シャーシやマウント類など計127個の部品を設計しました（加工も共同で担当しました）。また、制御系の補助として、Arduino
-        で動かす自律制御プログラムの実装とテスト、調整も担当しました。。
+        他メンバーには、神社の歴史を調べてもらい、私は大阪天満宮の３Dモデルを作成しました。何度も天満宮に行き、写真を撮影し、そこからスケッチを描いて具体的な構想を作るのに苦労しました。最初は時間のかかっていた設計も時間が経つうちに速く、正確にできるになり、高い設計能力を身に着けることができました。
       </p>
       <div class="img-2col-container">
         <div>
